# tmfalloc

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.md  rustfmt.toml
src/: allocator.rs  arena.rs  fd_and_mem.rs  lib.rs  root_box.rs  tests.rs  unix.rs  windows.rs
testbins/suicider/: Cargo.toml
testbins/suicider/src/: main.rs
