[package]
name = "tmfalloc"
version = "0.1.3"
authors = ["Vladimir Voznesenskiy <vvoznesensky@gmail.com>"]
edition = "2021"
rust-version = "1.74"
description = "Transactional memory-mapped file allocator"
readme = "README.md"
repository = "https://gitflic.ru/project/vvoznesensky/tmfalloc"
license = "MIT OR Apache-2.0"
keywords = ["cache", "local", "database", "transaction", "memory"]
categories = ["caching", "database-implementations",
    "data-structures", "embedded", "memory-management"]

[dependencies]
ctor = "0.2"
errno = "0.3"
const-str = "0.5"
intrusive-collections = "0.9"
indoc = "2.0"
checked_int_cast = "1.0"
test-binary = "3.0"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.42"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["signal"] }

