[package]
name = "tmfalloc"
version = "1.0.1"
authors = ["Vladimir Voznesenskiy <vvoznesensky@yandex.ru>"]
edition = "2021"
rust-version = "1.77"
description = "Transactional memory-mapped file allocator"
readme = "README.md"
repository = "https://gitflic.ru/project/vvoznesensky/tmfalloc"
license = "MIT OR Apache-2.0"
keywords = ["cache", "local", "database", "transaction", "memory"]
categories = ["caching", "database-implementations",
    "data-structures", "embedded", "memory-management"]

[dependencies]
ctor = "0.2"
errno = "0.3"
const-str = { version = "0.5", features = ["proc"] }
intrusive-collections = "0.9"

[dev-dependencies]
indoc = "2.0"
test-binary = "3.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem", "Win32_System_SystemServices",
    "Win32_System_Kernel", "Win32_System_SystemInformation",
    "Win32_System_Memory", "Win32_System_IO",
    "Win32_Security", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["signal"] }
